src/test/ui/parser/trait-pub-method.stderr
error: expected one of `async`, `const`, `extern`, `fn`, `type`, `unsafe`, or `}`, found `pub`
  --> $DIR/trait-pub-method.rs:4:5
   |
LL | trait Foo {
   |            - expected one of 7 possible tokens here
LL |     pub fn foo();
   |     ^^^ unexpected token

error: aborting due to previous error

